Fixed header spacing, darker background image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1917,7 +1917,7 @@
 			}
 
 			header {
-				margin: 0 0 0 0;
+				margin: 0 0 1.5em 0;
 			}
 
 				header > p {
